# stm32-gcc-cmake

./: CMakeLists.txt  FindCMSIS.cmake  FindHAL.cmake  FindSTM32CMSIS.cmake  FindSTM32HAL.cmake  stm32_gcc.cmake  stm32f0.cmake
cmake/: FindCMSIS.cmake  FindHAL.cmake  stm32_gcc.cmake  stm32_linker.cmake  stm32f0.cmake
stm32-template/: CMakeLists.txt  main.c  stm32f0xx_hal_conf.h
